# wsproxy

./: .dockerignore  .env.docker  .env.example  .env.production  .env.test  .gitignore  AGENTS.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  app_structure.md  architecture.md  docker-compose.override.yml  docker-compose.test.yml  docker-compose.yml  entrypoint.sh  project_plan.md  pyproject.toml  redis_100percent.conf  test_wsproxy.py
examples/: README.md  auth_token_setter.rs  load_test.rs  redis_publisher.rs  redis_subscriber.rs  ws_bidir_client.rs  ws_client.rs
loadtest/: README.md  config.py
loadtest/client/: load_client.py  metrics.py  reporter.py  session_client.py
loadtest/docker/: .env.loadtest  Dockerfile.fastapi  docker-compose.loadtest.yml  haproxy.cfg
loadtest/scripts/: analyze_results.py  run_loadtest.sh
loadtest/server/: llm_simulator.py  main.py  models.py  redis_client.py  session_manager.py
src/: config.rs  error.rs  main.rs  shutdown.rs  state.rs
src/auth/: jwt_validator.rs  mod.rs  validator.rs
src/handlers/: health.rs  mod.rs  websocket.rs
src/redis/: client.rs  mod.rs  pubsub.rs  pubsub_manager.rs
src/ws/: messages.rs  mod.rs  session.rs
tests/: bidirectional_flow.rs  websocket_flow.rs
